k8s/analytics/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
  labels:
    workload: analytics
    kubernetes.io/metadata.name: analytics
